--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-architect
+
+title: [lubuntu documentation - light Ubuntu installation instructions]
+google_analytics: [UA-17146009-11]
