--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-architect
 
-title: [lubuntu documentation - light Ubuntu installation instructions]
+title: [lubuntu documentation]
+description: [User Support for lubuntu]
 google_analytics: [UA-17146009-11]
