--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-architect
 
 title: [lubuntu documentation]
-description: [User Support for lubuntu, the light Ubuntu]
+description: [User Support for lubuntu - the light Ubuntu]
 google_analytics: [UA-17146009-11]
