--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 
-description: [User Support for lubuntu - the light Ubuntu]
+description: [User Documentation and Support for lubuntu - the light Ubuntu]
 google_analytics: [UA-17146009-11]
