--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-architect
 
-description: [Documentation and Support for lubuntu - the light Ubuntu]
+description: [lubuntu Documentation & Support for the light Ubuntu]
 google_analytics: [UA-17146009-11]
